fix tooltip builder implementation